# lightning-am

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: definitionsOfTranslation.cpp  definitionsOfTranslation.hpp  main.cpp
